# ai-news

./: .gitignore  CO-STAR.md  NEWSLETTER_TOPICS.md
ai-newsletter/: .env.example  .gitignore  CLAUDE.md  README.md  _agent_publish.py  config.py  main.py  pyproject.toml  requirements.txt  viewer.py
ai-newsletter/ai/: __init__.py  generator.py  selector.py  spinoff.py
ai-newsletter/crawlers/: __init__.py  arxiv.py  github_trending.py  reddit.py  rss_feeds.py
ai-newsletter/diagrams/: __init__.py  generator.py
ai-newsletter/macos/: com.kakao.ai-newsletter.plist
ai-newsletter/output/: __init__.py  backlog.py  index_builder.py  validate.py  writer.py
ai-newsletter/outputs/: index.html  style.css
ai-newsletter/outputs/2026-04-19-flashattention-3-vs-deepgemm-h100/: newsletter.html  newsletter.md
ai-newsletter/outputs/2026-04-19-genericagent-skill-tree/: newsletter.html  newsletter.md
ai-newsletter/outputs/2026-04-19-langgraph-11/: newsletter.html  newsletter.md
ai-newsletter/outputs/2026-04-19-magika-libmagic-1mb-cnn/: newsletter.html  newsletter.md
ai-newsletter/outputs/2026-04-19-project-glasswing-mythos-preview-llm/: newsletter.html  newsletter.md
ai-newsletter/outputs/2026-04-19-simula-synthetic-dataset/: newsletter.html  newsletter.md
ai-newsletter/outputs/2026-04-19-spex-llm-interaction-detection/: newsletter.html  newsletter.md
ai-newsletter/outputs/2026-04-19-swarm-openai-agents-sdk-handoff/: newsletter.html  newsletter.md
ai-newsletter/outputs/2026-04-20-codex/: newsletter.html  newsletter.md
(+14 files in other folders)
