[project]
name = "ai-newsletter"
version = "0.1.0"
description = "AI 개발자·엔지니어를 위한 기술 뉴스레터 자동 생성 시스템"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.30.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
newsletter = "main:run"

[dependency-groups]
dev = []
